fix: refactor code, delete excess code ,imports and add some info